--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ h1{
 }
 #myImage{
     display: none;
-    /* display: flex;
-    justify-content: center; */
+     display: flex;
+    justify-content: center; 
     margin: auto;
     margin-top: 40px;
 }
